objects/Restaurant__c.object
<CustomObject>
    <fields>
        <fullName>All_Items_Price__c</fullName>
        <label>All Items Price</label>
        <summarizedField>Product__c.Each_Item_Price__c</summarizedField>
        <summaryForeignKey>Product__c.Restaurant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ending_Time__c</fullName>
        <label>Ending Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timeings__c</fullName>
        <label>Timeings</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Available_Items__c</fullName>
        <label>Total Available Items</label>
        <summaryForeignKey>Product__c.Restaurant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Restaurant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>R Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restaurants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>